<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/linLayout">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="25sp"
                android:text="@string/Title"
                android:background="#FFFFFF"
                android:alpha="0.8" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="25sp"
                android:text="@string/Version"
                android:alpha="0.8"
                android:background="#FFFFFF" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnRefresh"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:text="@string/Refresh"
                android:background="@drawable/btn_blue"
                style="@style/ButtonText" />
            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
		        android:textAllCaps="false"
                android:textStyle="bold"
                android:text="@string/Start"
                android:background="@drawable/btn_green"
                style="@style/ButtonText" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:alpha="0.85">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="23sp"
                android:text="@string/Date"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:textSize="23sp"
                android:text="@string/Time"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="0.5"
                android:layout_margin="5dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:textSize="23sp"
                android:text="@string/Name"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:alpha="0.8"
        android:background="#9bdea0">
        <ListView
            android:id="@+id/listResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
