<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linLayout">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="7dp">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="0.5"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="25sp"
                android:text="@string/ListTitle"
                android:alpha="0.8"
                android:background="#FFFFFF" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btnHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_margin="8dp"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:text="@string/Home"
                android:background="@drawable/btn_green"
                style="@style/ButtonText" />
            <Button
                android:id="@+id/btnRefresh2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_margin="8dp"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:text="@string/Refresh"
                android:background="@drawable/btn_blue"
                style="@style/ButtonText" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:alpha="0.85">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:textSize="23sp"
                android:text="@string/Date"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:textSize="23sp"
                android:text="@string/Time"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#98cae6"
        android:alpha="0.85">
        <ListView
            android:id="@+id/selectResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </LinearLayout>
</LinearLayout>
